fix alignment based button on action type (#1491)
* fix alignment based on action type

* moving to CSS modules

--- a/src/components/@shared/atoms/Button/index.module.css
+++ b/src/components/@shared/atoms/Button/index.module.css
@@ -82,11 +82,6 @@
   min-width: auto;
 }
 
-.center {
-  margin: auto !important;
-  display: block;
-}
-
 /* Size Modifiers */
 .small {
   font-size: var(--font-size-small);
